h1. Changes

h2. Ruber 0.0.10

h3. Features

* The syntax checker plugin has been rewritten. Now other plugins can check the
  syntax of a document
* Ruby and YAML syntax checker now are in their own plugin, rather than being part
  of the syntax checker plugin
* The auto end plugin doesn't use indentation to decide whether the end keyword
  should be inserted or not. It performs a syntax check instead and only inserts
  end if ruby reports a missing end keyword. This should improve the accuracy of
  the plugin
* Clicking on a file name in an output widget with the middle mouse button now
  prevents the tool widget from being hidden, as if the pin button were clicked
* Changed the interface to specify patterns in the RSpec plugin
* The RSpec plugin now supports specs inside subdirectories. You can also specify
  subdirectories inside the pattern to match code file and the respective spec
  file
* When choosing the Run Specs for Current File action in the RSpec plugin, if the current
  document is associated with a code file, all the specs associated with it are
  run (previously, only one of them was run)
* When choosing the Run Current Spec action in the RSpec plugin, if the current
  document is a code file, the plugin will look at the most recently activated
  editor containing a spec file for the current file to determine which is the
  current spec.
  
h3. Bug fixes

* Do not crash when closing with unsaved files
* Horizontal scrollbar in the RSpec tool widget will be displayed when the spec
  description is larger than the widget but the rest of the text isn't

h2. Ruber 0.0.9

h3. Features

h2. Ruber 0.0.9

h3. Features

* It is now possible to have more than one open project at the same time
* When a project is active, only the editors associated with it are visibile
* Editors not associated with a project are visible only when there's no active
  project
* Made the Auto End plugin recognize some other keywords: @unless@, @for@, @while@,